test/files/pos/t6034.scala
final class OptPlus[+A](val x: A) extends AnyVal { }
