test/files/neg/t7859/A_1.scala
package p1 {
  class A(private[p1] val x: Any) extends AnyVal
}
class B(private val x: Any) extends AnyVal

